  * Update debian/testsuite-checking/expected-results-i486-gnu-libc.

  [ Aurelien Jarno ]
  * debian/control.in/*: add ${misc:Depends} to all binary packages.
  * debian/*symbols*: simplify symbol files by using the new #PACKAGE#
    feature.
  * Bump to Standards-Version 3.8.4.
  * kfreebsd/local-sysdeps.diff: update to revision 2975 (from glibc-bsd).

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 08 Feb 2010 19:20:38 +0100

eglibc (2.10.2-6) unstable; urgency=low

  [ Aurelien Jarno ]
  * kfreebsd/local-sysdeps.diff: update to revision 2957 (from glibc-bsd).
  * Don't run the testsuite in parallel, as it sometimes causes some failures
    in some tests.
  * Add patches/any/cvs-malloc_info-init.diff to fix malloc_info() with no
    malloc() done.  Closes: #562679.
  * Add patches/sh4/submitted-set_fpscr.diff to add __set_fpscr() prototype.
    Closes: #565369.
  * debian/rules.d/build.mk: Add --with-pkgversion and --with-bugurl
    arguments.
  * Add patches/ia64/submitted-memchr.diff to fix memchr() overshoot on ia64.
    Closes: #563882
  * Add patches/any/submitted-leading-zero-stack-guard.diff and
    patches/any/submitted-stack-guard-quick-randomization.diff from Ubuntu and
    Fedora to improve stack randomisation.  Closes: #568488.
  * Update es_CR locale from Marcelo Magallon.  Closes: #567351.
  * debian/script.in/nsscheck.sh: Only restart services that are currently
    running.  Closes: #528755.
  * Move locales and locales-all to section localization.  Closes: #568753.

  [ Samuel Thibault ]
  * patches/hurd-i386/local-pthread.diff: New hurd-only patch to provide
    LIBPTHREAD_SO and disable nscd.
  * patches/hurd-i386/local-pthread_posix-option.diff: Tell glibc Makefiles that
    we have a libpthread.
  * testsuite-checking/expected-results-i486-linux-gnu-libc: Update results.
  * patches/hurd-i386/submitted-posix_opt.h.diff: Update.
  * patches/hurd-i386/submitted-sysvshm.diff: Resync.