@@ -1,7 +1,8 @@
-2009-08-16  Aurelien Jarno  <aurelien@aurel32.net>
+2010-02-13  Aurelien Jarno  <aurelien@aurel32.net>
 
 	* sysdeps/unix/sysv/linux/alpha/bits/socket.h: New file based on
-	the generic version, with SOCK_NONBLOCK matching the kernel value.
+	the generic version, with SOCK_CLOEXEC and SOCK_NONBLOCK 
+	matching the kernel value.
 
 --- /dev/null
 +++ b/ports/sysdeps/unix/sysv/linux/alpha/bits/socket.h
@@ -70,7 +71,7 @@
 +  /* Flags to be ORed into the type parameter of socket and socketpair and
 +     used for the flags parameter of paccept.  */
 +
-+  SOCK_CLOEXEC = 02000000,	/* Atomically set close-on-exec flag for the
++  SOCK_CLOEXEC = 010000000,	/* Atomically set close-on-exec flag for the
 +				   new descriptor(s).  */
 +#define SOCK_CLOEXEC SOCK_CLOEXEC
 +#undef SOCK_NONBLOCK
