@@ -10,8 +10,10 @@ eglibc (2.10.2-7) UNRELEASED; urgency=low
     feature.
   * Bump to Standards-Version 3.8.4.
   * kfreebsd/local-sysdeps.diff: update to revision 2975 (from glibc-bsd).
+  * Update patches/alpha/submitted-sock_nonblock.diff to also fix 
+    SOCK_CLOEXEC.  Closes: #569646.
 
- -- Aurelien Jarno <aurel32@debian.org>  Mon, 08 Feb 2010 19:20:38 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 13 Feb 2010 11:09:45 +0100
 
 eglibc (2.10.2-6) unstable; urgency=low
 
